# QtAwesome

./: .gitignore  CMakeLists.txt  README.md
QtAwesome/: CMakeLists.txt
QtAwesomeSample/: CMakeLists.txt
cmake/pkg/: qtawesome-config.cmake.in
